--- a/BedrockBoot/Controls/TaskCard.xaml
+++ b/BedrockBoot/Controls/TaskCard.xaml
@@ -8,90 +8,24 @@
     xmlns:dev="using:DevWinUI"
     xmlns:local="using:BedrockBoot.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Width="364"
     mc:Ignorable="d">
 
-    <!--Grid BorderBrush="Black" BorderThickness="1">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="42" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="58" />
-        </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="42" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="42" />
-            </Grid.ColumnDefinitions>
-            <FontIcon
-                Grid.Column="0"
-                Margin="4"
-                Glyph="&#xF156;" />
-            <TextBlock
-                Grid.Column="1"
-                Margin="4"
-                VerticalAlignment="Center"
-                Text="Header" />
-            <Button
-                Grid.Column="2"
-                Margin="4"
-                Content="{dev:FontIcon FontSize=12,
-                                       Glyph=&#xE711;}" />
-        </Grid>
-        <Grid Grid.Row="1">
-        </Grid>
-        <Grid Grid.Row="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="136" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="136" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="32" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Button
-                Grid.Row="1"
-                Grid.Column="1"
-                HorizontalAlignment="Stretch"
-                VerticalAlignment="Stretch"
-                Content="关闭"
-                Foreground="{ThemeResource SystemFillColorCriticalBrush}"
-                Style="{StaticResource SubtleButtonStyle}" />
-            <Button
-                Grid.Row="1"
-                Grid.Column="3"
-                HorizontalAlignment="Stretch"
-                VerticalAlignment="Stretch"
-                Content="完成"
-                Style="{ThemeResource AccentButtonStyle}" />
-        </Grid>
-    </Grid-->
-
-    <controls:SettingsExpander
+    <controls:SettingsCard
         HorizontalAlignment="Stretch"
         Header="{x:Bind Header}"
-        HeaderIcon="{dev:FontIcon Glyph=&#xE821;}">
-        <Button
-            x:Name="Button"
-            Padding="4"
-            HorizontalAlignment="Stretch"
-            Click="CloseButton_Click"
-            Content="{dev:FontIcon Glyph=&#xE711;}"
-            Foreground="{ThemeResource SystemFillColorCriticalBrush}"
-            Style="{ThemeResource ChromelessButtonStyle}"
-            ToolTipService.ToolTip="取消该任务" />
-        <controls:SettingsExpander.Description>
-            <StackPanel Orientation="Vertical">
-                <ProgressBar x:Name="Process" Margin="0,4,0,4" />
-                <TextBlock x:Name="Process_Text" />
-            </StackPanel>
-        </controls:SettingsExpander.Description>
-    </controls:SettingsExpander>
+        HeaderIcon="{x:Bind _HeaderIcon}">
+        <StackPanel Orientation="Horizontal" Spacing="2">
+            <ContentControl Content="{x:Bind Content}" />
+            <Button
+                x:Name="Button"
+                Padding="4"
+                HorizontalAlignment="Stretch"
+                Click="CloseButton_Click"
+                Content="{dev:FontIcon Glyph=&#xE711;}"
+                Foreground="{ThemeResource SystemFillColorCriticalBrush}"
+                Style="{ThemeResource ChromelessButtonStyle}"
+                ToolTipService.ToolTip="取消该任务" />
+        </StackPanel>
+
+    </controls:SettingsCard>
 </UserControl>
