--- a/BedrockBoot/MainWindow.xaml
+++ b/BedrockBoot/MainWindow.xaml
@@ -19,7 +19,7 @@
     <Grid>
         <TeachingTip
             x:Name="NewTaskTeachingTip"
-            Title="ÒÑ´´½¨ÐÂµÄÈÎÎñ"
+            Title="å·²åˆ›å»ºæ–°çš„ä»»åŠ¡"
             IsLightDismissEnabled="True"
             PlacementMargin="20"
             PreferredPlacement="Auto" />
@@ -76,25 +76,24 @@
             <!--NavigationView.Header>
                 <dev:BreadcrumbNavigator x:Name="BreadCrumbNav" />
             </NavigationView.Header
-            DM: Õâ¶«Î÷Ã»ÓÃ£¬±¾À´ÊÇ¸øDevWinUIµÄBreadcrumbNavigatorÓÃµÄ£¬µ«Ëü²»¹ÜÓÃ£¬ËùÒÔÔÝÊ±×¢ÊÍµôÁË¡£
-            -->
+           kkkkk            -->
 
             <NavigationView.MenuItems>
                 <NavigationViewItem
                     x:Name="HomePageNavItem"
-                    Content="Ö÷Ò³"
+                    Content="ä¸»é¡µ"
                     Icon="{dev:FontIcon Glyph=&#xE80F;}"
                     IsSelected="True"
                     Tag="HomePage" />
                 <NavigationViewItem
                     x:Name="VersionPageNavItem"
-                    Content="ÒÑ°²×°°æ±¾"
+                    Content="å·²å®‰è£…ç‰ˆæœ¬"
                     Icon="{dev:FontIcon Glyph=&#xE7FC;}"
                     IsSelected="False"
                     Tag="VersionPage" />
                 <NavigationViewItem
                     x:Name="DownloadPageNavItem"
-                    Content="ÏÂÔØ"
+                    Content="ä¸‹è½½ç‰ˆæœ¬"
                     Icon="{dev:FontIcon Glyph=&#xE896;}"
                     IsSelected="False"
                     Tag="DownloadPage" />
@@ -102,7 +101,7 @@
             <NavigationView.FooterMenuItems>
                 <NavigationViewItem
                     x:Name="TaskPageNavItem"
-                    Content="ÈÎÎñ"
+                    Content="ä»»åŠ¡"
                     Icon="{dev:FontIcon Glyph=&#xE945;}"
                     Tag="TaskPage" />
 
