--- a/BedrockBoot/Controls/ContentDialogContent/DownloadGameContent.xaml
+++ b/BedrockBoot/Controls/ContentDialogContent/DownloadGameContent.xaml
@@ -11,26 +11,30 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid>
+    <ScrollViewer>
         <StackPanel
-            Margin="0,0,0,0"
+            Margin="0,0,15,0"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
             Spacing="8">
-            <TextBox x:Name="NameBox" HorizontalAlignment="Stretch" Header="名称" />
+            <TextBox x:Name="NameBox" HorizontalAlignment="Stretch" Header="实例名称" />
 
-            <TextBox x:Name="imgcolor" Text="#EF323D" HorizontalAlignment="Stretch" Header="启动页面颜色(带上#7位)" />
-            
-            <dev:ElementGroup HorizontalAlignment="Stretch">
-                <TextBox x:Name="imgback"  Width="225" Header="启动页面图片(空则默认)" />
-                <Button Click="ButtonBaseImg_OnClick" Margin="0,28,0,0" Content="{dev:FontIcon Glyph=&#xE838;}" />
-            </dev:ElementGroup>
-          
             <TextBlock Text="下载路径" />
             <dev:ElementGroup HorizontalAlignment="Stretch">
-                <TextBox x:Name="TextBox" Width="225" />
+                <TextBox x:Name="TextBox" Width="267" />
                 <Button Click="ButtonBase_OnClick" Content="{dev:FontIcon Glyph=&#xE838;}" />
             </dev:ElementGroup>
+
+            <TextBlock Text="启动页面颜色" />
+            <ColorPicker Color="#EF323D"
+                         Orientation="Vertical"
+                         x:Name="colorPicker"></ColorPicker>
+
+            <TextBlock Text="启动页面图片(空则默认)" />
+            <dev:ElementGroup HorizontalAlignment="Stretch">
+                <TextBox x:Name="imgback"  Width="267" />
+                <Button Click="ButtonBaseImg_OnClick" Content="{dev:FontIcon Glyph=&#xE838;}" />
+            </dev:ElementGroup>
         </StackPanel>
-    </Grid>
+    </ScrollViewer>
 </Page>
